<resources>
    <string name="app_name">Bai Tap 3</string>
    <string name="txt1">Register</string>
    <string name="txt2">Gender</string>
    <string name="txt3">Are you single?</string>
    <string name="edt1">Name</string>
    <string name="edt2">Birthday</string>
    <string name="edt3">Email</string>
    <string name="edt4">Password</string>
    <string name="btn1">Reg</string>
    <string name="btn2">Cancel</string>
    <string name="tog1">Yes, i am</string>
    <string name="tog2">No, i am not</string>
    <string name="checkbox">Tick is male</string>
    <string name="switch1">Switch</string>
</resources>
